[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/scenes/menu/TransitionScreen/TransitionScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/images/Tiles/AnimatedTiles/Hearth/Hearth.png" type="Texture" id=2]
[ext_resource path="res://LevelTransfer.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Beat",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 32.0

[node name="LevelTransfer" type="Area2D"]
script = ExtResource( 3 )

[node name="Pic" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "Beat"
playing = true

[node name="TransitionScreen" parent="." instance=ExtResource( 1 )]

[node name="AnimationPlayer" parent="TransitionScreen" index="0"]
autoplay = ""

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[connection signal="body_entered" from="." to="." method="_on_LevelTransfer_body_entered"]
[connection signal="animation_finished" from="TransitionScreen/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="TransitionScreen"]
